# basetopia-be

./: .dockerignore  .env  .gitignore  deploy.sh  example_game_post.json  pyproject.toml  request.json
app/: main.py
app/api/: endpoints.py  utils.py
app/ml/: agent.py  create_game_post.py  endpoints.py  highlight_tool.py  output_schema.py  tag_agent.py  vector_db.py
app/scripts/: create_test_user.py  exchange_token.py
app/services/: firebase_service.py  init_counter.py  translator.py
app/tests/: conftest.py  test_auth.py  test_post.py
app/webscraping/: find_event_by_timestamp.py  game.py  gemini_video.py  google_cloud_x_mlb(tm)_hackathon_exploring_mlb_provided_datasets.py  highlights.py  play.py  simple_highlight_migration.py  upload_all_highlights.py  video.py
basetopia_be/: main.py
basetopia_be/ml/: agent.py  highlight_tool.py  vector_db.py
webscraping/: find_event_by_timestamp.py  game.py  gemini_video.py  highlights.py  players.py  simple_highlight_migration.py  teams.py  upload_all_highlights.py  video.py
